[package]
name = "clap-git-options"
version = "0.1.0"
license = "Apache-2.0"
description = "Easily add `-C`, `--git-dir` & `--work-tree` flags"
edition = "2021"
repository = "https://github.com/kalkin/rust-clap-git-options"
keywords = [ "cli", "clap", "git"]
categories = ["command-line-utilities"]

[lib]

[dependencies]
clap = { version = "3", default-features = false, features = ["std", "derive"] }
git-wrapper = { version = "0.6.*", optional = true }
